--- a/themes/icarus/_config.yml
+++ b/themes/icarus/_config.yml
@@ -25,29 +25,29 @@ open_graph:
 navbar:
     # Navigation bar menu links
     menu:
-        Home: /
-        Archives: /archives
-        Categories: /categories
-        Tags: /tags
-        About: /about
+        首页: /
+        归档: /archives/
+        分类: /categories/
+        标签: /tags/
+        关于: /about/
     # Navigation bar links to be shown on the right
-    links:
-        Download on GitHub:
-            icon: fab fa-github
-            url: 'https://github.com/ppoffice/hexo-theme-icarus'
+    #links:
+    #    Download on GitHub:
+    #        icon: fab fa-github
+    #        url: 'https://github.com/ppoffice/hexo-theme-icarus'
 # Footer section link settings
 footer:
     # Links to be shown on the right of the footer section
-    links:
-        Creative Commons:
-            icon: fab fa-creative-commons
-            url: 'https://creativecommons.org/'
-        Attribution 4.0 International:
-            icon: fab fa-creative-commons-by
-            url: 'https://creativecommons.org/licenses/by/4.0/'
-        Download on GitHub:
-            icon: fab fa-github
-            url: 'https://github.com/ppoffice/hexo-theme-icarus'
+    #links:
+    #    Creative Commons:
+    #        icon: fab fa-creative-commons
+    #        url: 'https://creativecommons.org/'
+    #    Attribution 4.0 International:
+    #        icon: fab fa-creative-commons-by
+    #        url: 'https://creativecommons.org/licenses/by/4.0/'
+    #    Download on GitHub:
+    #        icon: fab fa-github
+    #        url: 'https://github.com/ppoffice/hexo-theme-icarus'
 # Article display settings
 article:
     # Code highlight settings
@@ -75,29 +75,29 @@ comment:
     type: 
 # Donation entries
 # https://ppoffice.github.io/hexo-theme-icarus/categories/Donation/
-donate:
-    -
-        # Donation entry name
-        type: alipay
-        # Qrcode image URL
-        qrcode: ''
-    -
-        # Donation entry name
-        type: wechat
-        # Qrcode image URL
-        qrcode: ''
-    -
-        # Donation entry name
-        type: paypal
-        # Paypal business ID or email address
-        business: ''
-        # Currency code
-        currency_code: USD
-    -
-        # Donation entry name
-        type: patreon
-        # URL to the Patreon page
-        url: ''
+#donate:
+#    -
+#        # Donation entry name
+#        type: alipay
+#        # Qrcode image URL
+#        qrcode: ''
+#    -
+#        # Donation entry name
+#        type: wechat
+#        # Qrcode image URL
+#        qrcode: ''
+#    -
+#        # Donation entry name
+#        type: paypal
+#        # Paypal business ID or email address
+#        business: ''
+#        # Currency code
+#        currency_code: USD
+#    -
+#        # Donation entry name
+#        type: patreon
+#        # URL to the Patreon page
+#        url: ''
 # Share plugin settings
 # https://ppoffice.github.io/hexo-theme-icarus/categories/Plugins/Share
 share:
@@ -125,11 +125,11 @@ widgets:
         # Where should the widget be placed, left or right
         position: left
         # Author name to be shown in the profile widget
-        author: Your name
+        author: cky
         # Title of the author to be shown in the profile widget
-        author_title: Your title
+        author_title: cky's blog
         # Author's current location to be shown in the profile widget
-        location: Your location
+        location: Xuzhou, Jiangsu
         # Path or URL to the avatar to be shown in the profile widget
         avatar: 
         # Email address for the Gravatar to be shown in the profile widget
@@ -137,38 +137,38 @@ widgets:
         # Whether to show avatar image rounded or square
         avatar_rounded: false
         # Path or URL for the follow button
-        follow_link: 'https://github.com/ppoffice'
+        follow_link: 'https://github.com/cuikangyi/'
         # Links to be shown on the bottom of the profile widget
         social_links:
             Github:
                 icon: fab fa-github
-                url: 'https://github.com/ppoffice'
-            Facebook:
-                icon: fab fa-facebook
-                url: 'https://facebook.com'
-            Twitter:
-                icon: fab fa-twitter
-                url: 'https://twitter.com'
-            Dribbble:
-                icon: fab fa-dribbble
-                url: 'https://dribbble.com'
-            RSS:
-                icon: fas fa-rss
-                url: /
+                url: 'https://github.com/cuikangyi/'
+            #Facebook:
+            #    icon: fab fa-facebook
+            #    url: 'https://facebook.com'
+            #Twitter:
+            #    icon: fab fa-twitter
+            #    url: 'https://twitter.com'
+            #Dribbble:
+            #    icon: fab fa-dribbble
+            #    url: 'https://dribbble.com'
+            #RSS:
+            #    icon: fas fa-rss
+            #    url: /
     -
         # Widget name
         type: toc
         # Where should the widget be placed, left or right
         position: left
-    -
-        # Widget name
-        type: links
-        # Where should the widget be placed, left or right
-        position: left
-        # Links to be shown in the links widget
-        links:
-            Hexo: 'https://hexo.io'
-            PPOffice: 'https://github.com/ppoffice'
+    #-
+    #    # Widget name
+    #    type: links
+    #    # Where should the widget be placed, left or right
+    #    position: left
+    #    # Links to be shown in the links widget
+    #    links:
+    #        Hexo: 'https://hexo.io'
+    #        PPOffice: 'https://github.com/ppoffice'
     -
         # Widget name
         type: category
