config  iconcdn use bootcdn

--- a/themes/icarus/_config.yml
+++ b/themes/icarus/_config.yml
@@ -237,4 +237,4 @@ providers:
     # Name or URL of the webfont CDN provider
     fontcdn: google
     # Name or URL of the webfont Icon CDN provider
-    iconcdn: fontawesome
+    iconcdn: https://cdn.bootcss.com/font-awesome/5.4.1/css/all.css
